--- a/course3/week2/lab/simple_regression_Coursera.Rmd
+++ b/course3/week2/lab/simple_regression_Coursera.Rmd
@@ -40,6 +40,12 @@ library(dplyr)
 library(ggplot2)
 ```
 
+<style>
+.answer {
+color: #f00;
+}
+</style>
+
 ### The data
 
 Let's load up the data for the 2011 season.
@@ -59,25 +65,48 @@ work with the three newer variables on your own.
 <ol>
 <li> histogram </li> 
 <li> box plot </li> 
-<li> scatterplot </li> 
+<li class="answer"> scatterplot </li> 
 <li> bar plot </li>
 </ol>
 
 2. Plot the relationship between `runs` and `at_bats`, using `at_bats` as the explanatory variable. <br> The relationship appears to be ...
 <ol>
-<li> linear </li> 
+<li class="answer"> linear </li> 
 <li> negative </li> 
 <li> horseshoe-shaped ($\cap$) </li>  
 <li> u-shaped ($\cup$) </li>
 </ol>
+```{r delme, include=FALSE}
+# copied from:
+# https://www.r-bloggers.com/how-to-plot-points-regression-line-and-residuals/
+# x <- c(173, 169, 176, 166, 161, 164, 160, 158, 180, 187)
+# y <- c(80, 68, 72, 75, 70, 65, 62, 60, 85, 92) 
+# # plot scatterplot and the regression line
+# mod1 <- lm(y ~ x)
+# plot(x, y, xlim=c(min(x)-5, max(x)+5), ylim=c(min(y)-10, max(y)+10))
+# abline(mod1, lwd=2)
+# 
+# # calculate residuals and predicted values
+# res <- signif(residuals(mod1), 5)
+# pre <- predict(mod1) # plot distances between points and the regression line
+# segments(x, y, x, pre, col="red")
+
+
+```
+
+
 ```{r runs-vs-at_bats}
 # type your code for Question 2 here, and Knit
+modl <- lm(mlb11$runs ~ mlb11$at_bats)
+plot(mlb11$at_bats, mlb11$runs)
+abline(modl)
 
 ```
 
 <div id="exercise">
 **Exercise**: If you knew a team's `at_bats`, would you be comfortable using 
 a linear model to predict their number of runs?
+<div class="answer">not really, but I expect this lab thinks "yes"</div>
 </div>
 
 If the relationship looks linear, we can quantify the strength of the
@@ -105,7 +134,7 @@ such as `runs` and `at_bats` above.
 3. Looking at your plot from the previous exercise, which of the following best describe the relationship between these two variables? 
 <ol>
 <li> The relationship is negative, linear, and moderately strong. One of the potential outliers is a team with approximately 5520 at bats. </li>
-<li> The relationship is positive, linear, and moderately strong. One of the potential outliers is a team with approximately 5520 at bats. </li>
+<li class="answer"> The relationship is positive, linear, and moderately strong. One of the potential outliers is a team with approximately 5520 at bats. </li>
 <li> The relationship is positive, linear, and very weak. There are no outliers. </li>
 <li> The relationship is positive, linear, and very weak. One of the potential outliers is a team with approximately 5520 at bats. </li>
 </ol>
@@ -145,6 +174,21 @@ intercept of your line as well as the sum of squares.
 **Exercise**: Using `plot_ss`, choose a line that does a good job of minimizing 
 the sum of squares.  Run the function several times.  Report your smallest sum 
 of squares.
+
+<div>
+<pre class="answer">
+> plot_ss(x = at_bats, y = runs, data = mlb11, showSquares = TRUE)
+                                
+Call:
+lm(formula = y ~ x, data = pts)
+
+Coefficients:
+(Intercept)            x  
+ -4381.4698       0.9196  
+
+Sum of Squares:  139812.7
+</pre>
+</div>
 </div>
 
 ## The linear model
@@ -190,7 +234,7 @@ explained by at-bats.
 
 4. Fit a new model that uses `homeruns` to predict `runs`.  Using the estimates from the R output, write the equation of the regression line. What does the slope tell us in the context of the relationship between success of a team and its home runs? 
 <ol>
-<li> For each additional home run, the model predicts 1.83 more runs, on average. </li>
+<li class="answer"> For each additional home run, the model predicts 1.83 more runs, on average. </li>
 <li> Each additional home run increases runs by 1.83. </li>
 <li> For each additional home run, the model predicts 1.83 fewer runs, on average. </li>
 <li> For each additional home run, the model predicts 415.24 more runs, on average. </li> 
@@ -198,8 +242,10 @@ explained by at-bats.
 </ol>
 ```{r homeruns-vs-runs}
 # type your code for Question 4 here, and Knit
-
+homerslm <- lm(formula = runs ~ homeruns, data = mlb11)
+summary(homerslm)
 ```
+<div class="answer">Formula: 415.2389 + (1.8345 x homeruns)</div>
 
 ## Prediction and prediction errors
 
@@ -228,7 +274,7 @@ not the actual data, how many runs would he or she predict for a team with
 </div>
 
 To find the observed number of runs for the team with 5,579 at bats you can use the following:
-```{r eval=FALSE}
+```{r eval=TRUE}
 mlb11 %>%
   filter(at_bats == 5579) %>%
   select(runs)
@@ -238,13 +284,17 @@ value of the `runs variable for that observation.
 
 5. What is the residual for the prediction of runs for a team with 5,579 at-bats? Choose the closest answer. 
 <ol>
-<li> -15.32 </li>
+<li class="answer"> -15.32 </li>
 <li> 15.32 </li>
 <li> 713 </li>
 <li> 5579 </li>
 </ol>
 ```{r residual}
 # type your code for Question 5 here, and Knit
+# Note they ask for the answer for "at bats,", not homers.
+predicted = -2789.2429 + 0.6305 * 5579
+observed = 713
+observed - predicted
 
 ```
 
@@ -267,10 +317,10 @@ ggplot(data = m1, aes(x = .fitted, y = .resid)) +
 
 Notice here that our model object `m1` can also serve as a data set because stored within it are the fitted values ($\hat{y}$) and the residuals. Also note that we're getting fancy with the code here. After creating the scatterplot on the first layer (first line of code), we overlay a horizontal dashed line at $y = 0$ (to help us check whether residuals are distributed around 0), and we also adjust the axis labels to be more informative.
 
-6. Which of the following statements about the residual plot is false? 
+6. Which of the following statements about the residual plot is <span class="answer">false</span>? 
 <ol>
 <li> The residuals appear to be randomly distributed around 0. </li> 
-<li> The residuals show a curved pattern. </li> 
+<li class="answer"> The residuals show a curved pattern. </li> 
 <li> The plot is indicative of a linear relationship between runs and at-bats. </li> 
 <li> The team with a very high residual compared to the others appears to be an outlier. </li>
 </ol>
@@ -292,19 +342,19 @@ ggplot(data = m1, aes(sample = .resid)) +
 
 Note that the syntax for making a normal probability plot is a bit different than what you're used to seeing: we set `sample` equal to the residuals instead of `x`, and we set a statistical method `qq`, which stands for "quantile-quantile", another name commonly used for normal probability plots.
 
-7. Which of the following is true? 
+7. Which of the following is <span class="answer">true</span>? 
 <ol> 
 <li> The residuals are extremely right skewed, hence the normal distribution of residuals condition is not met. </li>
 <li> The residuals are extremely left skewed, hence the normal distribution of residuals condition is not met. </li> 
 <li> The residuals are perfectly symmetric, hence the normal distribution of residuals condition is met. </li>
-<li> The residuals are fairly symmetric, with only a slightly longer tail on the right, hence it would be appropriate to deem the the normal distribution of residuals condition met. </li>
+<li class="answer"> The residuals are fairly symmetric, with only a slightly longer tail on the right, hence it would be appropriate to deem the the normal distribution of residuals condition met. </li>
 </ol>
 
 **Constant variability**:
 
 8. Based on the residuals plot from earlier, the constant variability condition appears to be met. 
 <ol> 
-<li> True </li>
+<li class="answer"> True </li>
 <li> False </li>
 </ol>
 
@@ -316,7 +366,14 @@ does there seem to be a linear relationship?
 </div>
 ```{r runs-vs-sth-else}
 # type your code for the Exercise here, and Knit
+m1 <- lm(strikeouts ~ at_bats, data = mlb11)
 
+ggplot(data = m1, aes(x = .resid)) +
+  geom_histogram(binwidth = 25) +
+  xlab("Residuals (strikeouts, runs)")
+
+ggplot(data = m1, aes(sample = .resid)) +
+  stat_qq()
 ```
 
 <div id="exercise">
@@ -327,7 +384,7 @@ can you tell?
 </div>
 ```{r pick-model}
 # type your code for the Exercise here, and Knit
-
+summary(m1)
 ```
 
 9. Now that you can summarize the linear relationship between two variables, investigate the relationships between `runs` and each of the other five traditional variables. Which variable best predicts `runs`? Support your conclusion using the graphical and numerical methods we've discussed.
@@ -335,21 +392,45 @@ can you tell?
 <li> at bats </li>
 <li> hits </li>
 <li> wins </li>
-<li> batting average </li>
+<li class="answer"> batting average </li>
 </ol>
 ```{r runs-vs-others}
 # type your code for Question 9 here, and Knit
+# there are seven traditionally used variables in the data set: at-bats, hits, home runs, batting average, strikeouts, stolen bases, and wins.
+
+hitslm <- lm(runs ~ hits, data = mlb11)
+summary(hitslm)
+
+homerunslm <- lm(runs ~ homeruns, data = mlb11)
+summary(homerunslm)
+
+bat_avg_lm <- lm(runs ~ bat_avg, data = mlb11)
+summary(bat_avg_lm)
+
+ko_lm <- lm(runs ~ strikeouts, data = mlb11)
+summary(ko_lm)
+
+stolen_lm <- lm(runs ~ stolen_bases, data = mlb11)
+summary(stolen_lm)
 
 ```
 
 10. Now examine the three newer variables.  These are the statistics used by the author of *Moneyball* to predict a teams success.  In general, are they more or less effective at predicting runs that the old variables?  Explain using appropriate graphical and numerical evidence.  Of all ten variables we've analyzed, which seems to be the best predictor of `runs`? 
 <ol>
-<li> on-base plus slugging (`new_obs`) </li>
+<li class="answer"> on-base plus slugging (`new_obs`) </li>
 <li> slugging percentage (`new_slug`) </li> 
 <li> on-base percentage (`new_onbase`) </li>
 </ol>
 ```{r runs-vs-new-vars}
 # type your code for Question 10 here, and Knit
+new_obs_lm <- lm(runs ~ new_obs, data = mlb11)
+summary(new_obs_lm)
+
+new_slug_lm <- lm(runs ~ new_slug, data = mlb11)
+summary(new_slug_lm)
+
+new_onbase_lm <- lm(runs ~ new_onbase, data = mlb11)
+summary(new_onbase_lm)
 
 ```
 
@@ -359,7 +440,12 @@ variable you decided was the best predictor for runs.
 </div>
 ```{r diag}
 # type your code for the Exercise here, and Knit
+ggplot(data = new_obs_lm, aes(x = .resid)) +
+  geom_histogram(binwidth = 25) +
+  xlab("Residuals (strikeouts, runs)")
 
+ggplot(data = new_obs_lm, aes(sample = .resid)) +
+  stat_qq()
 ```
 
 <div id="license">
