--- a/course3/final/reg_model_project.Rmd
+++ b/course3/final/reg_model_project.Rmd
@@ -15,15 +15,6 @@ output:
 library(ggplot2)
 library(dplyr)
 library(statsr)
-```
-
-### Load data
-
-Make sure your data and R Markdown files are in the same directory. When loaded
-your data file will be called `movies`. Delete this note when before you submit 
-your work. 
-
-```{r load-data}
 load("movies.Rdata")
 ```
 
@@ -47,6 +38,30 @@ load("movies.Rdata")
 NOTE: Insert code chunks as needed by clicking on the "Insert a new code chunk" 
 button above. Make sure that your code is visible in the project you submit. 
 Delete this note when before you submit your work.
+```{r audience-score}
+summary(movies$audience_score)
+hist(movies$audience_score)
+```
+```{r audience-rating}
+summary(movies$audience_rating)
+qplot(movies$audience_rating, geom="bar")
+```
+
+```{r imdb-rating}
+summary(movies$imdb_rating)
+hist(movies$imdb_rating)
+```
+
+```{r critics-rating}
+ratings <- movies$critics_rating
+summary(ratings)
+qplot(ratings, geom="bar")
+```
+
+```{r critics-score}
+summary(movies$critics_score)
+```
+
 
 * * *
 
