TODO items highlighted

--- a/course3/final/notes.org
+++ b/course3/final/notes.org
@@ -10,51 +10,51 @@ As part of this project you will complete exploratory data analysis
 All template and rubric files that you will need to complete this
 project can be found on the Project Files and Rubric page.
 *** Data: (3 points)
-**** Describe how the observations in the sample are collected, and
-**** the implications of this data collection method on the scope
+**** TODO Describe how the observations in the sample are collected, and
+**** TODO the implications of this data collection method on the scope
 of inference (generalizability / causality).
 *** Research question: (3 points)
-**** Come up with a research question
+**** TODO Come up with a research question
 that you want to answer using these data and a multiple linear
 regression model.
-**** You should phrase your research question
+**** TODO You should phrase your research question
 in a way that matches up with the scope of inference your dataset
 allows for.
-**** You are welcomed to create new variables based on existing ones.
-**** Along with your research question include a brief discussion
+**** TODO You are welcomed to create new variables based on existing ones.
+**** TODO Along with your research question include a brief discussion
 (1-2 sentences) as to why this question is of interest to you and/or
 your audience.
 *** EDA: (10 points)
-**** Perform exploratory data analysis (EDA) that addresses
+**** TODO Perform exploratory data analysis (EDA) that addresses
 the research question you outlined above.
-**** Your EDA should contain numerical summaries and visualizations.
-**** Your EDA does not have to touch on every single variable that
+**** TODO Your EDA should contain numerical summaries and visualizations.
+**** TODO Your EDA does not have to touch on every single variable that
 you are considering for your model, but what you choose to present
 should be a deliberate (not haphazard) selection. This might mean you
 initially create a lot more visualizations and summary statistics than
 what you finally choose to include in your paper.
-**** Each R output and plot should be accompanied
+**** TODO Each R output and plot should be accompanied
 by a brief interpretation.
 *** Modeling: (20 points)
-**** Develop a multiple linear regression model
+**** TODO Develop a multiple linear regression model
 to predict a numerical variable in the dataset.
-**** The response variable and the explanatory variables
+**** TODO The response variable and the explanatory variables
 can be existing variables in the dataset, or new variables you create
 based on existing variables.
 *** Prediction: (5 points)
-**** Pick a movie from 2016 (a new movie that is not in the sample)
+**** TODO Pick a movie from 2016 (a new movie that is not in the sample)
 and
-***** do a prediction for this movie using your the model
+***** TODO do a prediction for this movie using your the model
 you developed and
-***** the `predict` function in R.
-***** Also quantify the uncertainty around this prediction
+***** TODO the `predict` function in R.
+***** TODO Also quantify the uncertainty around this prediction
 using an appropriate interval.
 *** Conclusion: (3 points)
-**** A brief summary of your findings from the previous sections without
+**** TODO A brief summary of your findings from the previous sections without
 repeating your statements from earlier
-**** as well as a discussion of what you have learned about the data
+**** TODO as well as a discussion of what you have learned about the data
 and your research question.
-**** You should also discuss any shortcomings of your current study
+**** TODO You should also discuss any shortcomings of your current study
 (either due to data collection or methodology) and include ideas for
 possible future research.
 
@@ -78,7 +78,7 @@ adding more data.
 - audience_score
 
 to name a few.
-** Maybe look at the distributions of the different ratings
+** TODO Maybe look at the distributions of the different ratings
 How skewed are the different ratings systems?
 *** audience_score
 > summary(movies$audience_score)
